# electricity_bill_detection

./: CMakeLists.txt  Dockerfile  README.md
src/: electricity_bill_detection.cpp
